--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 				<a href="" class="header__logo"><img src="img/Mylogo2.svg" alt=""></a>
 				<nav class="header__menu">
 					<ul class="menu__list">
-						<li class="menu__item"><a href="#home" class="menu__link">HOME</a></li>
-						<li class="menu__item"><a href="#achievements" class="menu__link">Achievements</a></li>
-						<li class="menu__item"><a href="#work" class="menu__link">Work</a></li>
-						<li class="menu__item"><a href="#about" class="menu__link">About</a></li>
-						<li class="menu__item"><a href="#footer" class="menu__link">Contact me</a></li>
+						<li class="menu__item"><a href="#home" class="menu__link">Главная</a></li>
+						<li class="menu__item"><a href="#achievements" class="menu__link">Достижения</a></li>
+						<li class="menu__item"><a href="#work" class="menu__link">Работы</a></li>
+						<li class="menu__item"><a href="#about" class="menu__link">Обо мне</a></li>
+						<li class="menu__item"><a href="#footer" class="menu__link">Контакты</a></li>
 					</ul>
 				</nav>
 				<div class="menu__icon">
