--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 						<span> "IT Essentials"</span> </div>
 				</div>
 				<div class="about__gallery">
-					<div class="about__img"><img src="img/cards/_C Основы_certificate_page-0001.jpg" alt=""></div>
-					<div class="about__img"><img src="img/cards/_C_certificate (1)_page-0001.jpg" alt=""></div>
+					<div class="about__img"><img src="img/cards/C-Основы_certificate_page-0001.png" alt=""></div>
+					<div class="about__img"><img src="img/cards/C_certificate-_1__page-0001.png" alt=""></div>
 					<div class="about__img"><img src="img/cards/Essentials-certificate.png" alt=""></div>
 				</div>
 			</div>
