--- a/index.html
+++ b/index.html
@@ -102,27 +102,29 @@
 				<div class="works__body">
 					<div class="works__card card">
 						<div class="card__img">
-							<img src="img/cards/calc.png" alt="">
+							<img src="img/work/img portfolio.bmp" alt="">
 						</div>
 						 <div class="card__info">
-							<span class="card__tag">Калькулятор на JavaScript</span>
-							<div class="card__text">Web страничка с калькулятором <span>при написании использовал HTML5 CSS3 JS</span></div>
+							<span class="card__tag">Портфолио</span>
+							<div class="card__text">Web страничка Портфолио <span>при написании использовал HTML5 CSS3 JS</span></div>
 							<div class="card__category">Website</div>
-							<a href="https://github.com/word-guru/Calculator-JS.git" class="card__button">Просмотреть</a>
+							<a href="https://github.com/word-guru/Calculator-JS.git" class="card__button">Просмотреть код:</a>
 						</div>
 					</div>
-					<!--<div class="works__card card card_r">
+					<div class="works__card card card_r">
 						<div class="card__img">
-							<img src="img/cards/card-2.png" alt="">
+							<a href="https://word-guru.github.io/MovieApi/"><img src="img/work/img movieApi.bmp" alt=""></a>
 						</div>
 						<div class="card__info">
-							<span class="card__tag">Plant identification app</span>
-							<div class="card__text">Lorem ipsum dolor sit amet, consectetur <span>adipiscing elit. Ultrices
-									lorem non feugiat egestas amet.</span></div>
-							<div class="card__category">Mobile App</div>
-							<a href="" class="card__button">View work</a>
+							<span class="card__tag">Movie Api</span>
+							<div class="card__text">Web страничка: Рейтинг и краткая информация о фильмах 
+								 <span>при написании использовал HTML5 CSS3 JS. </span>
+								 Для просмотра сайта жми фото.
+							</div>
+							<div class="card__category">Website</div>
+							<a href="https://github.com/word-guru/MovieApi.git" class="card__button">Просмотреть код:</a>
 						</div>
-					</div> -->
+					</div> 
 				</div>
 			</div>
 		</section>
