добавлены проекты. Добавленна связь по email

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio PPA</title>
+	<title>Portfolio</title>
 
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -36,7 +36,7 @@
 
 		<section id="home" class="observe hero">
 			<div class="container">
-				<h1 class="hero__title">Привет, это я, Павел. <span class="glowIn">Начинающий программист проживающий в Липецке</span></h1>
+				<h1 class="hero__title">Привет! Это я, Павел. <span class="glowIn">Начинающий программист проживающий в Липецке</span></h1>
 				<a href="#work" class="hero__arrow"></a>
 			</div>
 		</section>
@@ -67,6 +67,7 @@
 						<img src="img/logos/icons8-javascript-96.svg" alt="">
 					</div>
 				</div>
+				
 			</div>
 		</section>
 
@@ -133,9 +134,37 @@
 			<div class="container about__container">
 				<div class="about__info">
 					<h2 class="about__title">Немного обо мне</h2>
-					<div class="about__text"><span>Я не так давно начал увлекаться программированием,
-					</span> со временем это стало моим хобби. Помимо программирования, Я люблю активный отдых, велопрогулки 
-					и посещение исторических мест. </div>
+					<div class="about__text">
+						Изучение программирования я начал с C/C++:
+						<span>
+							 Основы, ООП, STL
+					    </span>
+						 <br/>Pеляционные БД:  
+						<span>
+							MsSQL, MySQL.<br/> 
+						</span>
+						Более углубленное изучение C#:
+						<span> основы, ООП, .NET Framework, .NET Core, сетевое програм., системное програм., ADO.Net, LINQ.</span>
+						<br/> Разработка приложений:
+						<span> 
+							 Windows Forms, WPF
+						</span>
+						<br/>Backend: 
+						<span>
+							ASP.NET Core 5 (Core 6), Razor Pages, Blazor, MVC, Web API 
+						</span>
+						<br/>Frontend: 
+						<span>
+							HTML5, CSS3, JS, Bootstrap5
+						</span>
+						<br/>Android разработка: 
+						<span>Android studio, JAVA</span>
+						<br/>Могу работать и обучаться как один так и в команде, умею гуглить). Спокойный
+						<span>, усидчивый, пунктуальный, спокойно отношусь к критике расценивая </span>
+                        как дополнительный толчок к совершенствованию. <br/>Немного о хобби.
+						<span><br/> Обожаю игры настольные, спортивные ну и конечно компьютерные,</span>
+						также неоткажусь от велопрогулки, посещения исторических мест и с удовольствием схожу в театр.
+					</div>
 				</div>
 				<div class="about__gallery">
 					<div class="about__img"><img src="img/about/foto1.jpg" alt=""></div>
@@ -155,6 +184,7 @@
 					<a href="https://t.me/SHUMADAN_Z" сlass="footer__social" target="_blank"><i class="fab fa-telegram"></i></a>
 					<a href="https://join.skype.com/invite/COELsdVTqn85" сlass="footer__social" target="_blank"><i class="fab fa-skype"></i></a>
 					<a href="https://discord.gg/snu3SFhS" сlass="footer__social" target="_blank"><i class="fab fa-discord"></i></a>
+					<a href="mailto:i@pavel-lip.ru" сlass="footer__social" target="_blank"><i class="fas fa-envelope"></i></a>
 				</div>
 				<div class="footer__copyright">Made with ❣️ by <span>Pavel Popov</span></div>
 			</div>
