--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<span class="card__tag">Портфолио</span>
 							<div class="card__text">Web страничка Портфолио <span>при написании использовал HTML5 CSS3 JS</span></div>
 							<div class="card__category">Website</div>
-							<a href="https://github.com/word-guru/Calculator-JS.git" class="card__button">Просмотреть код:</a>
+							<a href="https://github.com/word-guru/portfolio.git" class="card__button">Просмотреть код:</a>
 						</div>
 					</div>
 					<div class="works__card card card_r">
